--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
     "axios": "^1.11.0",
+    "fast-xml-parser": "^5.2.5",
     "firebase": "^12.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-player": "^3.3.1",
     "react-router-dom": "^7.7.1",
+    "react-timeago": "^8.3.0",
     "sweetalert2": "^11.22.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
